# Orcast

./: Cargo.toml  README.md
docs/: GETTING_STARTED.md  README.md  REFERENCE.md  alpaca-endpoints.md  config.md  implementation-plan.md  milestones.md  orcast_improvements_for_options_screener.md  risk-controls.md  system-design.md  testing-and-ops.md
examples/: get_positions.rs  place_multi_leg_order.rs  place_single_leg_order.rs  screen_csv.rs  screen_tickers.rs  simple.rs  stream_trade_updates.rs
src/: alpaca.rs  config.rs  error.rs  features.rs  http.rs  lib.rs  main.rs  market_data.rs  screener.rs  streaming.rs  trading.rs  util.rs
src/strategies/: mod.rs
src/strategies/bear_put_spread/: mod.rs
src/strategies/bull_call_spread/: mod.rs
src/strategies/covered_call/: mod.rs
src/strategies/long_call/: mod.rs
src/strategies/long_put/: mod.rs
src/strategies/long_straddle/: mod.rs
src/strategies/long_strangle/: mod.rs
src/strategies/protective_put/: mod.rs
tests/: alpaca_requests.rs
