[package]
name = "orcast"
version = "0.1.0"
edition = "2024"
description = "A Rust library for Orcast functionality"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
repository = "https://github.com/yourusername/orcast"
readme = "README.md"
keywords = ["orcast", "rust"]
categories = ["development-tools"]

[dependencies]
