[package]
name = "orcast"
version = "0.1.2"
edition = "2024"
description = "Lean Alpaca options trading client scaffolding (paper-first, Level 3-ready)"
authors = ["Orcast Contributors"]
license = "MIT"
repository = "https://github.com/yourusername/orcast"
readme = "README.md"
keywords = ["alpaca", "options", "trading", "client", "rust"]
categories = ["development-tools", "api-bindings"]
exclude = [
    "docs/**",
    "examples/**",
    "tests/**",
    "target/**",
    ".github/**",
    ".idea/**",
    ".vscode/**",
    "scripts/**",
    "images/**",
    "src/main.rs",
    "Cargo.lock",
    ".gitignore",
    "*.orig",
]

[dependencies]
thiserror = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
httpmock = "0.7"
