[package]
name = "orcast"
version = "0.2.0"
edition = "2024"
description = "OHLCV-driven options ticker screener (Rust). Fetch daily bars; rank tickers per strategy category."
authors = ["Orcast Contributors"]
license = "MIT"
repository = "https://github.com/rustic-ml/Orcast"
readme = "README.md"
keywords = ["ohlcv", "screener", "options", "rust"]
categories = ["algorithms", "development-tools"]
exclude = [
    "docs/**",
    "examples/**",
    "tests/**",
    "target/**",
    ".github/**",
    ".idea/**",
    ".vscode/**",
    "scripts/**",
    "images/**",
    "Cargo.lock",
    ".gitignore",
    "*.orig",
]

[dependencies]
thiserror = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
csv = "1"

[dev-dependencies]
httpmock = "0.7"
